fix theme toggle background colour and alignment

--- a/src/main.css
+++ b/src/main.css
@@ -45,7 +45,7 @@ body {
 }
 
 .container {
-  /*border: 1px solid green;*/
+  /* border: 1px solid green; */
   display: flex;
   max-width: var(--content-width);
   /* height: auto; */
@@ -64,7 +64,7 @@ body {
 }
 
 .logo {
-  margin-bottom: 1rem;
+  /* margin-bottom: 1rem; */
   font-size: 1.4rem;
   font-weight: 700;
   color: var(--font-color);
@@ -82,6 +82,7 @@ body {
 .nav-bar {
   display: flex;
   gap: 1.5rem;
+  margin-top: 1rem;
 }
 
 .nav-item-outer a:hover {
@@ -153,10 +154,17 @@ main {
   box-shadow: 8px 8px tomato;
   height: 14rem;
 }
+#theme-toggle {
+  width: 4rem;
+  height: 4rem;
+  margin-bottom: 40px;
+  background-color: var(--background-color);
+  border: none;
+}
 
-.theme-img nav body {
-  font: 14px "Century Gothic", Futura, sans-serif;
-  margin: 20px;
+ .theme-img{
+  height: inherit;
+  width: inherit;  
 }
 
 /* Footer styles */
@@ -176,7 +184,7 @@ footer > .container {
 /*Gallery styles*/
 
 .gallery-container {
-    /*border: 1px solid green;*/
+    /* border: 1px solid green; */
     display: block;
     max-width: var(--content-width);
     /* height: auto; */
